# aule

./: CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  manifest.schema.json
.claude/commands/contract/: test-api.md
.claude/skills/contract-tester/: .generated  SKILL.md
.claude/skills/skill-develop/: .generated
.claude/skills/skill-init/: .generated  SKILL.md
.claude/skills/skill-publish/: SKILL.md
.claude/skills/skill-scout/: SKILL.md
.claude/skills/skill-validate/: .generated
.claude/skills/spec-linter/content/: spec-linter.md
.claude/skills/spec-linter/logic/: package.json
.codex/skills/contract-tester/tools/: generate  report
.codex/skills/skill-build/: .generated  SKILL.md
.codex/skills/skill-develop/: SKILL.md
.codex/skills/skill-publish/: .generated
.codex/skills/skill-scout/: .generated
.codex/skills/skill-validate/: SKILL.md
.codex/skills/spec-linter/: SKILL.md
crates/aule-adapter/: Cargo.toml
crates/aule-adapter/src/: adapter_def.rs  generate.rs  lib.rs  paths.rs  registry.rs  script.rs  target.rs
crates/aule-adapter/tests/: real_skills_test.rs
crates/aule-cache/: Cargo.toml
crates/aule-cache/src/: activation.rs  artifact.rs  config.rs  error.rs  hooks.rs  integrity.rs  lib.rs  manager.rs  metadata.rs
crates/aule-cli/: Cargo.toml
crates/aule-cli/src/: main.rs  output.rs  registry.rs
crates/aule-cli/src/commands/: activate.rs  adapters.rs  build.rs  infer.rs  init.rs  install.rs  list.rs  login.rs  logout.rs  migrate.rs  mod.rs  publish.rs  search.rs  validate.rs
crates/aule-cli/tests/: cli_test.rs
crates/aule-infer/: Cargo.toml
crates/aule-infer/src/: assessor.rs  builder.rs  gatherer.rs  lib.rs  scanner.rs  types.rs
crates/aule-resolver/: Cargo.toml
crates/aule-resolver/src/: compat.rs  error.rs  lib.rs  policy.rs  resolve.rs  types.rs
crates/aule-schema/: Cargo.toml
crates/aule-schema/src/: contract.rs  envelope.rs  lib.rs  manifest.rs  metadata.rs  permissions.rs  scaffold.rs  validation.rs
docs/: architecture.md  authoring-skills.md
examples/api-contract-tester/: skill.yaml
examples/skill-build/: skill.yaml
examples/skill-build/content/: skill.md
examples/skill-develop/: skill.yaml
examples/skill-develop/content/: skill.md
examples/skill-init/: skill.yaml
examples/skill-init/content/: skill.md
examples/skill-publish/: skill.yaml
examples/skill-publish/content/: skill.md
examples/skill-scout/: skill.yaml
examples/skill-scout/content/: skill.md
examples/skill-validate/: skill.yaml
examples/skill-validate/content/: skill.md
openspec/changes/cli-example-skills/: tasks.md
openspec/changes/manifest-v02-schema/: design.md  proposal.md  tasks.md
openspec/changes/pluggable-adapters/: design.md  proposal.md  tasks.md
openspec/changes/skill-ecosystem-v0-spec/: design.md  proposal.md  tasks.md
openspec/changes/skill-infer/: design.md  proposal.md  tasks.md
openspec/changes/skill-registry-platform/: design.md  proposal.md  tasks.md
platform/: .env.local.example  package-lock.json  package.json
platform/app/: layout.tsx  page.tsx
platform/app/skills/: page.tsx
platform/components/: copy-button.tsx  search-bar.tsx  site-footer.tsx  site-header.tsx  skill-card.tsx
platform/lib/: api.ts  auth.ts  contract.ts  github.ts  indexer.ts  manifest.ts  permissions.ts
platform/lib/supabase/: admin.ts
platform/supabase/: config.toml  seed.sql
platform/supabase/migrations/: 20250101000000_initial_schema.sql
skills/openspec-apply-change/: skill.yaml
skills/openspec-apply-change/content/: skill.md
skills/openspec-archive-change/: skill.yaml
skills/openspec-archive-change/content/: skill.md
skills/openspec-explore/: skill.yaml
skills/openspec-explore/content/: skill.md
skills/openspec-propose/: skill.yaml
skills/openspec-propose/content/: skill.md
(+63 files in other folders)
