[workspace]
resolver = "2"
members = [
    "crates/aule-schema",
    "crates/aule-resolver",
    "crates/aule-adapter",
    "crates/aule-cache",
    "crates/aule-infer",
    "crates/aule-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
sha2 = "0.10"
