[package]
name = "aule-adapter"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aule-schema = { path = "../aule-schema" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
