[package]
name = "aule-cache"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aule-schema = { path = "../aule-schema" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
