[package]
name = "aule-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "skill"
path = "src/main.rs"

[dependencies]
aule-schema = { path = "../aule-schema" }
aule-resolver = { path = "../aule-resolver" }
aule-adapter = { path = "../aule-adapter" }
aule-cache = { path = "../aule-cache" }
clap = { version = "4", features = ["derive"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
