[package]
name = "aule-infer"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aule-schema = { path = "../aule-schema" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
reqwest = { version = "0.12", features = ["json", "blocking"] }
glob = "0.3"
toml = "0.8"

[dev-dependencies]
tempfile = "3"
