[package]
name = "aule-resolver"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aule-schema = { path = "../aule-schema" }
aule-cache = { path = "../aule-cache" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
semver = "1"
serde_yaml = { workspace = true }
tempfile = "3"

[dev-dependencies]
