[package]
name = "aule-schema"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
jsonschema = "0.29"
regex = "1"
